# tournamentsoftware

./: .gitignore  .main.py.un~  .main.py~.un~  .match.py.un~  .match.py~.un~  .tournament.py.un~  README.md  database.py  docker-compose.yaml  dummies.json  dummy_schema.json  fastapi_app.py  main.py  match.py  mongodb_dummy.py  package-lock.json  package.json  player.py  player_database.py  player_schema.json  players.json  test-README.md  testing_player.py  tournament.py
.devcontainer/: devcontainer.json
backend/: .main.py:q.swp  .tournament.py.swp  Dockerfile  README.md  auth.py  database.py  fastapi_app.py  main.py  match.py  match_database.py  mongo.py  player.py  player_database.py  pyproject.toml  readme.MD  requirements.txt  tournament.py  tournament_database.py  utils.py
backend/.devcontainer/: backend-devcontainer.json  devcontainer.json
backend/database/: fastapi_app.py  match_database.py  player_database.py  tournament_database.py
backend/objects/: match.py  player.py  tournament.py
backend/source/: pyvenv.cfg
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts.timestamp-1733457212508-70937953241ba.mjs
frontend/.devcontainer/: devcontainer.json  frontend-devcontainer.json
frontend/src/: .App.tsx.swp  App.css  App.js  App.tsx  Dockerfile  PlayerProfilePage.tsx  SignUp.tsx  TournamentForm.js  copyofmain.tsx  index.css  index.js  index.tsx  main.tsx
frontend/src/components/: .TournamentForm.tsx.swp  .TournamentsList.tsx.swp  .searchPlayerform.tsx.swp  CreateTournament.tsx  Dialog.tsx  MatchHistory.tsx  MatchHolder.tsx  MatchSchedule.tsx  PlayerList.tsx  PlayerProfilePage.tsx  PlayersList.tsx  RegisterPlayer.tsx  SearchBar.tsx  SelectMatch.tsx  SideBar.tsx  SignIn.tsx  Spinner.tsx  TextBox.tsx  (+9 more)
json_schemas/: match_schema.json  player_schema.json  tournament_schema.json
test-frontend/: index.html  package.json  tailwind.config.js
test-frontend/src/: App.tsx  main.tsx
(+30 files in other folders)
