[project]
name = "tournament-backend"
version = "0.1.0"
description = "Backend service with FastAPI and Firebase"
requires-python = ">=3.11"
authors = [
    {name = "TAS32", email = "tas32@bigtech.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "firebase-admin>=6.2.0",
    "pymongo>=4.6.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",  # For async test support
    "pytest-cov>=4.1.0",       # Coverage reports
    "httpx>=0.25.0",           # For async API testing
    
    # Linting and Formatting
    "ruff>=0.1.3",            # Fast linter
    "black>=23.10.0",         # Code formatter
    "mypy>=1.6.1",            # Type checking
    
    # Development Tools
    "uvicorn[standard]>=0.24.0",  # For development server
    "pre-commit>=3.5.0",          # Pre-commit hooks
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
]
ignore = ["E501"]  # Line length violations
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
(
    venv/.*
    | \.env
    | \.venv
)
'''

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"  # For pytest-asyncio
